--- a/vignettes/rmytarget-auth.Rmd
+++ b/vignettes/rmytarget-auth.Rmd
@@ -4,7 +4,7 @@ author: "Alexey Seleznev"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Authorization in MyTarget RUS}
+  %\VignetteIndexEntry{Авторизация в API MyTarget с помощью пакета rmytarget}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
